--wip-- [skip ci]

--- a/_config.yml
+++ b/_config.yml
@@ -670,7 +670,7 @@ google_analytics:
   only_pageview: false
 
 # Baidu Analytics
-baidu_analytics: # <app_id>
+baidu_analytics: 18200d2d8b9c4a481da9db4b196ce15d
 
 # Growingio Analytics
 growingio_analytics: # <project_id>
